--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
@@ -300,9 +300,9 @@
   </footer>
 
   <!-- JavaScript Files -->
-  <script src="/js/analytics.js"></script>
-  <script src="/js/translations.js"></script>
-  <script src="/js/audio.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/analytics.js"></script>
+  <script src="js/translations.js"></script>
+  <script src="js/audio.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
