--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <meta property="twitter:image" content="https://simpleclock.online/images/twitter-image.jpg">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
   
   <!-- Hreflang tags -->
   <link rel="alternate" hreflang="en" href="https://simpleclock.online/">
@@ -149,7 +149,7 @@
   <header>
     <h1 class="header-title">SimpleClock</h1>
     <div class="logo-container">
-      <img src="/images/logo.png" alt="SimpleClock Logo - Digital Clock Icon" width="200" height="50">
+      <img src="images/logo.png" alt="SimpleClock Logo - Digital Clock Icon" width="200" height="50">
     </div>
   </header>
   
@@ -288,11 +288,11 @@
 
   <footer>
     <div class="footer-links">
-      <a href="/pages/privacy-policy.html" rel="noopener">Privacy Policy</a>
-      <a href="/pages/terms-of-service.html" rel="noopener">Terms of Service</a>
-      <a href="/pages/about.html" rel="noopener">About Us</a>
-      <a href="/pages/contact.html" rel="noopener">Contact</a>
-      <a href="/sitemap.xml" rel="noopener">Sitemap</a>
+      <a href="pages/privacy-policy.html" rel="noopener">Privacy Policy</a>
+      <a href="pages/terms-of-service.html" rel="noopener">Terms of Service</a>
+      <a href="pages/about.html" rel="noopener">About Us</a>
+      <a href="pages/contact.html" rel="noopener">Contact</a>
+      <a href="sitemap.xml" rel="noopener">Sitemap</a>
     </div>
     <div class="copyright">
       &copy; 2025 SimpleClock.online - All rights reserved
