--- a/pages/contact.html
+++ b/pages/contact.html
@@ -178,10 +178,10 @@
             
             <div class="contact-method">
                 <span class="contact-method-icon">📧</span>
-                <span>Email: support@simpleclock.online</span>
+                <span>Email: info@simpleclock.online</span>
             </div>
             
-            <div class="contact-method">
+            <div class="contact-method">x
                 <span class="contact-method-icon">🐦</span>
                 <span>Twitter: @SimpleClock</span>
             </div>
